--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="navbar">
         <ul>
             <li>
-                <a href="C:\Users\kubat\Desktop\Aplikacja\STRONA\index\index.html" >
+                <a href="https://github.com/kubushime/streona1/edit/main/index.html#L15C68" >
                      HOME
                  </a>
              </li>
